<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/logo"
        android:layout_height="200dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutemail"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextemail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="#000000" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="#000000" />
    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:textColor="#000000"
            android:textStyle="bold"
            android:id="@+id/signUp"
            android:gravity="start"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPassword"
            android:textColor="#000000"
            android:layout_alignParentRight="true"
            android:id="@+id/forgetPassword"
            android:textStyle="bold"
            android:gravity="end"
            />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButtonRegisterservcies"
        android:layout_width="260dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:background="@drawable/shaperegester"
        android:text="@string/login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/skip"
        android:text="@string/ignore"
        android:gravity="center_horizontal"
        />
</LinearLayout>
</RelativeLayout>