<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Regester">
    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:background="@drawable/upload"
                    android:id="@+id/upload"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextname"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="#000000" />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="8"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:text="+962"

                        />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutphone"
                        android:layout_width="0dp"
                        android:layout_weight="7"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditTextphone"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/phone"
                            android:inputType="number"
                            android:maxLines="1"
                            android:padding="5dp"
                            android:textColor="#000000" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutemail"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextemail"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="#000000" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/textInputEditTextcity"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/city"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="#000000" />
                <View
                    android:layout_width="match_parent"
                    android:background="#999999"
                    android:layout_height="1dp">

                </View>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutId"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextId"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/personId"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="#000000" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutpassword"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextpassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="#000000" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutConfirmpassword"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextConfirmpassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/hint_confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="#000000" />
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/name"
                    android:id="@+id/id"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/appCompatButtonRegisterservcies"
                    android:layout_width="320dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:background="@drawable/shaperegester"
                    android:text="@string/text_register" />


            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>