<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="left"
            android:text="@string/info"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cunti"
        android:layout_below="@id/app_bar"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"

            android:layout_margin="15dp"
            android:id="@+id/num_kilo"

            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:text="@string/name"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:editable="false"
                android:id="@+id/name"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_marginLeft="3dp"
                android:background="@drawable/rounded_edittext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:id="@+id/total_view"
            android:layout_below="@id/num_kilo"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/address"
                android:textSize="15dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:id="@+id/address"
                android:gravity="center"

                android:maxLines="3"
                android:textColor="#000000"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_edittext"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:id="@+id/phonee"
            android:layout_below="@id/total_view"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/phone"

                android:textSize="15dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:id="@+id/phone"
                android:editable="false"
                android:gravity="center"
                android:inputType="phone"
                android:textColor="#000000"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_edittext"
                />
        </LinearLayout>
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="15dp"
            android:id="@+id/map"
            android:layout_below="@+id/phonee"

            android:padding="5dp"
            android:background="@drawable/rounded_edittext"
            class="com.google.android.gms.maps.SupportMapFragment"
            />

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="#ffffff"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:id="@+id/cunti"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"

        android:background="@drawable/shaperegester"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:textStyle="bold" />
</RelativeLayout>